# memex-server

./: .gitignore  .goreleaser.yml  ARCHITECTURE_PIVOT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  commands.go  docker-compose.yml  editor.go  go.mod  go.sum  main.go
agora/: __init__.py  cli.py  config.py  digest.py  memex_connector.py  models.py  requirements.txt  sender.py  server.py  store.py
bench/: .gitignore  README.md  anchor_demo.py  attention_analysis_results.json  baseline_rag.py  baseline_rag_full.py  benchmark.py  benchmark_kg.py  benchmark_kg_agent.py  benchmark_kg_v2.py  benchmark_memex_bias.py  evaluate_world_model.py  generate_mock_data.py  generate_synthetic_org.py  graph_attention_bias.py  ingest.py  ingest_ai.py  ingest_demo.py  learn.py  live_demo.py  load_synthetic_to_memex.py  memex_bias_adapter.py  memex_sdpa.py  ml_worker.py  monitor.py  multi_user_demo.py  multi_user_simulation.py  office_connector.py  office_setup.py  reconcile_progress.py  requirements.txt  results_kg.json  results_kg_agent.json  results_kg_full.json  results_kg_v2.json  run_parallel.sh  run_world_model_demo.sh  screen_monitor.py  start_monitor.sh  test_memex_bias.py  (+10 more)
bridge/: providers.py  query.py  requirements.txt  tools.py
docs/: API.md  ARCHITECTURE_RECOMMENDATIONS.md  DESIGN.md  DEVELOPMENT.md  MIGRATION.md  MODULE.md  REWRITE_PLAN.md  SDK.md  STORAGE.md  TRANSACTION.md  VERSION.md  attention-dag.md  deletion-policy.md  wikipedia-ontology.md  (+1 more)
tui/: .gitignore  pyproject.toml
tui/memex_tui/: __init__.py  app.py  chat.py  provider.py  tools.py
(+271 files in other folders)
